welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: value >- is not a member of Int
while (j >- haut-1){
         ^